Estoy agregando una ventana modal

--- a/src/main/webapp/iniciar.css
+++ b/src/main/webapp/iniciar.css
@@ -289,3 +289,21 @@ input[type=text]:placeholder {
 * {
   box-sizing: border-box;
 }
+.enlace {
+    display:inline;
+    border:0;
+    padding:0;
+    margin:0;
+    text-decoration:underline;
+    background:none;
+    color:#000088;
+    font-family: arial, sans-serif;
+    font-size: 1em;
+    line-height:1em;
+  }
+  
+  .enlace:hover {
+    text-decoration:none;
+    color:#0000cc;
+    cursor:pointer;
+  }
