--- a/src/main/webapp/iniciar.css
+++ b/src/main/webapp/iniciar.css
@@ -238,4 +238,22 @@ input[type=text]:placeholder {
 .underlineHover:hover:after{
   width: 100%;
 }
+.enlace {
+  display:inline;
+  border:0;
+  padding:0;
+  margin:0;
+  text-decoration:underline;
+  background:none;
+  color:#000088;
+  font-family: arial, sans-serif;
+  font-size: 1em;
+  line-height:1em;
+}
+
+.enlace:hover {
+  text-decoration:none;
+  color:#0000cc;
+  cursor:pointer;
+}
 
