Se arreglo el error del lado mas blanco

--- a/src/main/webapp/iniciar.css
+++ b/src/main/webapp/iniciar.css
@@ -58,8 +58,8 @@ h2 {
 }
 
 #formFooter {
-  background-color: #f6f6f6;
-  border-top: 1px solid #dce8f1;
+  background-color: #fff;
+  border-top: 1px solid #fff;
   padding: 25px;
   text-align: center;
   -webkit-border-radius: 0 0 10px 10px;
