--- a/src/main/webapp/dark.css
+++ b/src/main/webapp/dark.css
@@ -25,6 +25,15 @@
 .dark p{
     color: rgb(211, 211, 211);
 }
+.dark h{
+    color: white;
+}
+.dark h3{
+    color: white;
+}
+.dark h5{
+    color: white;
+}
 .dark h2{
     color: white;
 }
@@ -34,3 +43,8 @@
 .dark .card__perfil:hover{
     border: solid green 2px;
 }
+.dark .input{
+    background-color: #181818;
+}
+
+
