--- a/src/main/webapp/iniciar.css
+++ b/src/main/webapp/iniciar.css
@@ -9,7 +9,12 @@ body {
 
     height: 100vh;    
     background-color: #35A8E0;
-
+    background-image: url('media/imagenes/fondo2.png');
+	background-attachment:fixed; 
+	background-size:cover; 
+	background-repeat:no-repeat;  
+	background-position-x:center; 
+	background-position-y:center;
 }
 
 a {
