--- a/src/main/webapp/assets/libs/css/style.css
+++ b/src/main/webapp/assets/libs/css/style.css
@@ -4165,9 +4165,9 @@ Pills vertical
 
 .page-item.active .page-link {
     z-index: 1;
-    color: #fff;
-    background-color: #5969ff;
-    border-color: #5969ff;
+    color: #ffffff;
+    background-color: #69bee8;
+    border-color: #ffffff;
 }
 
 
